# FetchIt

./: README.md  arm_motion_notes  cartesian_motion_notes  notes  protocol_4_30_19  protocol_5_1_19  protocol_5_2_19  protocol_5_3_19
URDF/: README.md
URDF/exmpl_models/launch/: add_Fetch_kit.launch
URDF/exmpl_models/small_cylinder/: small_cylinder.sdf
URDF/part_codes/msg/: part_codes.msg
URDF/team_case_fetch_model/: CMakeLists.txt  fetch.launch.xml  package.xml  team_case_fetch.gazebo.xacro
URDF/worlds/: Fetch_kit.world  README.md  cafe.world  model.world
URDF/worlds/launch/: Fetch_kit.launch
_TESTNOTES_old/: experiment_notes_4_26
_TESTNOTES_old/04-15/: Instruction_2019-04-15.md  README.md
_TESTNOTES_old/04-17/: README.md  TODO.md  remote_tests_April_17
_TESTNOTES_old/04-23/: README.md  TODO.md  remote_tests_April_23
coordinator/: CMakeLists.txt  README  README.md
coordinator/_Notes/: README
coordinator/_Old_packages/: blind_lame_grab_all.cpp
coordinator/coordinator/: CMakeLists.txt  README.md  package.xml
coordinator/coordinator/src/: arm_test.cpp  coordinator.cpp  grab_all.cpp  grab_all_v2.cpp  grab_tote.cpp  grab_tote_v2.cpp  move_grab_and_stow.cpp  vision_demo.cpp  visit_all.cpp
coordinator/coordinator_launch/: CMakeLists.txt  README.md  arm_test.launch  coordinator.launch  package.xml
coordinator/move_part_lib/: CMakeLists.txt  README.md  package.xml
coordinator/move_part_lib/src/: example_move_part_main.cpp  move_part.cpp
external_constant/triad_marker/: CMakeLists.txt
fetch_arm_behavior_server/: CMakeLists.txt  README  README.md  package.xml
fetch_arm_behavior_server/cartesian_motion_commander/: README.md
fetch_arm_behavior_server/launch/: fetch_static_transforms.launch
fetch_arm_behavior_server/src/: fetch_cart_move_as.cpp  robot_specific_names.h
gazebo_set_state/: CMakeLists.txt  README.md
gazebo_set_state/src/: freeze_robot_service.cpp  set_kit_service.cpp
gripper_control/: CMakeLists.txt  package.xml
gripper_control/src/: gripper_test_client.cpp
gripper_interface/: CMakeLists.txt  README.md  package.xml
gripper_interface/include/gripper_interface/: gripper_interface.h
gripper_interface/src/: gripper_interface.cpp
kinematics/: manipulation_notes
kinematics/arm_motion_interface/src/: arm_motion_interface.cpp
kinematics/cartesian_motion_commander/src/: example_generic_cart_move_ac3.cpp
kinematics/fetch_fk_ik/: README.md  dev_notes  kinematics_notes
kinematics/fetch_fk_ik/src/: fetch_fk_ik.cpp  fetch_fk_ik.cpp.fixed  fetch_fk_ik_spottest_main.cpp
kinematics/test_fetch_arm_ac/: CMakeLists.txt  README.md  package.xml
kinematics/test_fetch_arm_ac/src/: fetch_arm_test_interactive.cpp
kinetic_packages/: README.md
main/: CMakeLists.txt  README.md  package.xml
main/launch/: bringup_main.launch  bringup_nodrive.launch  start_demo.launch  start_main_headless.launch
main/rviz/: RVIZ_with_everything.rviz
manipulation/: README.md
manipulation/_Notes/: README
manipulation/arm_motion_action/: README.md
manipulation/arm_motion_action/action/: arm_interface.action
manipulation/bringup_manipulation/: CMakeLists.txt  README.md  bringup_manipulation.launch  package.xml
manipulation/cartesian_motion_commander/: CMakeLists.txt  README.md
manipulation/fetch_move_arm/: CMakeLists.txt  README.md  package.xml
manipulation/manipulation_launch/: pre_pose.launch
manipulation/move_part_lib/: README.md
manipulation/move_part_lib/src/: move_part.cpp
manipulation/test_fetch_arm_ac/: CMakeLists.txt  README.md  package.xml
manipulation/test_fetch_arm_ac/src/: fetch_arm_safe_start.cpp
navigation/: README.md  wheel_speed_max
navigation/bringup_navigation/: README.md
navigation/mobot_pub_des_state/: CMakeLists.txt  README.md  Table_coordinates_transform(open_loop) .HEIC  package.xml
navigation/mobot_pub_des_state/src/: pub_des_state.cpp  pub_des_state.h  pub_des_state_main.cpp  pub_des_state_path_client_3mx3m_sqr.cpp  pub_des_state_path_client_amcl_correction.cpp  pub_des_state_path_client_table_command.cpp  pub_des_state_path_client_table_loop.cpp
navigation/move_base_lib/: CMakeLists.txt  README.md  package.xml
navigation/navigation_launch/: CMakeLists.txt  navigation.launch  package.xml
navigation/traj_builder/: CMakeLists.txt  README.md  package.xml
perception/: README  README.md
perception/bringup_vision/: CMakeLists.txt  README.md  bringup_vision.launch  package.xml
perception/fetch_vision/: CMakeLists.txt  README.md
perception/object_finder/: CMakeLists.txt  README.md  package.xml
perception/object_finder/include/object_finder_as/: object_finder.h
perception/object_finder/src/: bolt_finder_fncs.cpp  example_object_finder_action_client.cpp  find_tote_fncs.cpp  gear_finder_fncs.cpp  gearbox_finder_fncs.cpp  object_finder_as.cpp  object_finder_as_lib.cpp  object_finder_helper_fncs.cpp  object_finder_main.cpp  template_tote_finder_fncs.cpp  tote_finder_fncs.cpp  wsn_gear_finder_fncs.cpp
perception/object_finder_launch/: object_finder.launch
perception/object_finder_lib/: CMakeLists.txt  README.md  package.xml
perception/object_finder_lib/include/object_finder_lib/: object_finder.h
perception/object_finder_lib/src/: example_main_object_finder_lib.cpp  object_finder_lib.cpp
teamCaseFetch_external_pkgs/: README.md
teamCaseFetch_launchers/: CMakeLists.txt  README.md  package.xml
teamCaseFetch_launchers/launch/: bagger_manip.launch  bagger_nav.launch  bagger_vision.launch  bringup_manipulation.launch  bringup_vision.launch  rviz_all.launch  template_bag.launch  test_cartesian_motion_commander.launch  test_coord_grab.launch  test_drive.launch  test_grab.launch
teamCaseFetch_return/: CMakeLists.txt  README.md  package.xml
teamCaseFetch_return/maps/: placeholder
teamCase_fetch_model/: CMakeLists.txt  README.md  package.xml
test_fetch_arm_ac/: CMakeLists.txt  README.md
test_navigation/: CMakeLists.txt  README.md  map_postprocessing_notes  package.xml
test_navigation/launch/: amcl.launch  slam_n_generate_map.launch
test_navigation/rviz/: RVIZ_with_everything.rviz
(+43 files in other folders)
