<?xml version="1.0"?>
<package>
    <name>teamcasefetch_launchers</name>
    <version>1.0.0</version>
    <description>The teamCaseFetch_lauchers package</description>
    <maintainer email="Chude.Qian@case.edu">Frank Qian</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/frank-qcd-qk</url>
    <author email="Chude.Qian@case.edu">Frank Qian</author>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
</package>
    