<?xml version="1.0"?>
<package>
    <name>test_fetch_arm_ac</name>
    <version>0.0.0</version>
    <description>The test_fetch_arm_ac package</description>
    <maintainer email="atlas3@todo.todo">atlas3</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>trajectory_msgs</build_depend>
    <build_depend>fetch_fk_ik</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>trajectory_msgs</run_depend>
    <run_depend>fetch_fk_ik</run_depend>
</package>
    