<?xml version="1.0"?>
<package>
  <name>bringup_vision</name>
  <version>0.0.0</version>
  <description>The object_finder_launch package</description>
  <maintainer email="atlas3@todo.todo">atlas3</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
    