<?xml version="1.0"?>
<package>
    <name>object_finder</name>
    <version>0.0.0</version>
    <description>The object_finder package</description>
    <maintainer email="wyatt@todo.todo">wyatt</maintainer>
    <license>TODO</license>
    <build_depend>message_generation</build_depend>
    <run_depend>message_runtime</run_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>pcl_utils</build_depend>
    <build_depend>xform_utils</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>pcl_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>simple_action_client</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>part_codes</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>pcl_utils</run_depend>
    <run_depend>xform_utils</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>libpcl-all-dev</run_depend>
    <run_depend>pcl_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>simple_action_client</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>part_codes</run_depend>
    <run_depend>std_msgs</run_depend>
</package>
    
