<?xml version="1.0"?>
<package>
    <name>object_finder_lib</name>
    <version>0.0.0</version>
    <description>The object_finder_lib package</description>
    <maintainer email="wyatt@todo.todo">wyatt</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>part_codes</build_depend>
    <build_depend>object_finder</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>part_codes</run_depend>
    <run_depend>object_finder</run_depend>
</package>